docs/static/css/item-slot.css
@font-face {
    font-family: "MC-Regular";
    src: url("https://rumyantsev168.github.io/static/font/MinecraftRegular.otf");
}

item-slot, item-slot-grid {
    display: inline-block;
}

.item-slot {
    position: relative;
    background: #8B8B8B no-repeat center center / 32px 32px;
    border: 2px solid;
    border-color: #373737 #FFF #FFF #373737;
    width: 32px;
    height: 32px;
    image-rendering: pixelated;
    cursor: default;
    text-align: center;
    box-sizing: content-box;
}

.item-slot::before, .item-slot::after {
    content: "";
    position: absolute;
    background-color: #8B8B8B;
    height: 2px;
    width: 2px;
    pointer-events: none;
}

.item-slot::before {
    bottom: -2px;
    left: -2px;
}

.item-slot::after {
    top: -2px;
    right: -2px;
}

.item-slot > span {
    position: absolute;
    bottom: 0;
    right: 0;
    line-height: 1em;
    width: fit-content;
    font-size: 16px;
    font-family: MC-Regular;
    color: #ffffff;
    text-shadow: 0.1em 0.1em 0px black;
}

.item-slot-tooltip {
    display: none;
    position: fixed;
    padding: 0.2em 0.3em 0.2em 0.4em;
    background: #1E0F1E;
    color: #ffffff;
    font-family: MC-Regular;
    font-size: 1rem;
    text-align: left;
    width: fit-content;
    z-index: 9999;
    white-space: nowrap;
    pointer-events: none;
    line-height: 1em;
    box-shadow:
        0 -0.1em 0 0 #1E0F1E,
        0  0.1em 0 0 #1E0F1E,
        -0.1em 0 0 0 #1E0F1E,
        0.1em 0 0 0 #1E0F1E;
}

.item-slot-tooltip::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    border: 0.1em solid #2B0A5E;
}

.item-slot-tooltip .item-slot-tooltip-text-shadow {
    position: absolute;
    top: calc(0.1em + 0.1em);
    left: calc(0.4em + 0.1em);
    opacity: 25%;
    line-height: initial;
}

.item-slot:hover .item-slot-tooltip {
    display: block;
}

.item-slot-mcui {
    background-color: #C6C6C6;
    border: 2px solid;
    border-color: #DBDBDB #5B5B5B #5B5B5B #DBDBDB;
    padding: 6px;
    text-align: left;
    white-space: nowrap;
    vertical-align: bottom;
    height: fit-content;
}

.item-slot-crafting-ui {
    display: flex;
    align-items: center;
    gap: 8px;
    width: fit-content;
}

.item-slot-grid {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0px;
}

.item-slot-row {
    display: flex;
    align-items: left;
}

.item-slot-crafting-arrow {
    display: inline-block;
    image-rendering: pixelated;
    background: url(https://minecraft.wiki/images/Grid_layout_Arrow_%28small%29.png?a4894) no-repeat;
    min-width: 32px;
    height: 26px;
}

